--- a/Sprint 2/index.html
+++ b/Sprint 2/index.html
@@ -1,1 +1,301 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+
+    <!-- font cmd link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+
+     <!-- css cmd link -->
+     <link rel="stylesheet" href="styles.css">
+
+      <!-- aos cmd link -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+</head>
+<body>
+
+ <!-- header section STARTS -->
+    <header class="header">
+
+        <div id="menu-btn" class="fas fa-bars"> </div>
+
+        <h1>Portfolio</h1>
+
+        <nav class="navbar">
+            <a href="#home" class="active">home</a>
+            <a href="#about">about</a>
+            <a href="#educ-exp">education & experience</a>
+            <a href="#services">services</a>
+            <a href="#portfolio">portfolio</a>
+            <a href="#contact">contact</a>
+        </nav>
+
+        <div class="follow">
+            <a href="#" class="fab fa-facebook-f"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-linkedin"></a>
+            <a href="#" class="fab fa-github"></a>
+        </div>
+
+    </header>
+
+<!-- header section ENDS -->
+
+<!-- home section STARTS -->
+
+<section class="home" id='home' >
+    <div class="image" data-aos="fade-right">
+        <img src="usr-img.jpg" alt="">
+    </div>
+
+    <div class="content" data-aos="fade-left">
+        <h3>Hi, I am Anne Doe.</h3>
+        <span> web designer and web developer</span>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sint praesentium aliquid aperiam quas magni eveniet!</p>
+
+        <a href="#about" class= "btn">about me</a>
+    </div>
+</section>
+
+<!-- home section ENDS -->
+
+<!-- about section STARTS -->
+
+<section class="about" id="about">
+
+    <h1 class="heading" data-aos="fade-up"> <span>about me</span> </h1>
+
+    <div class="biography" data-aos="fade-up">
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, numquam ipsam omnis magni dolorem ullam.</p>
+
+        <div class="bio">
+            <h3> <span>name:  </span> Anne Doe </h3>
+            <h3> <span>email:  </span> annedoe@gmail.com </h3>
+            <h3> <span>age:  </span> 23 </h3>
+            <h3> <span>address:  </span> Miag-ao, Iloilo </h3>
+            <h3> <span>phone:  </span> 09123456789 </h3>
+            <h3> <span>experience:  </span> 3+ years </h3>
+        </div>
+
+    </div>
+
+</section>
+<!-- about section ENDS -->
+
+
+<!-- educ &exp section STARTS -->
+
+<section class="educ-exp" id="educ-exp">
+
+    <h1 class="heading" data-aos="fade-up"> <span>education & experience </span></h1>
+
+    <div class="row">
+
+        <div class="box-container">
+
+            <h3 class="title" data-aos="fade-right">education</h3>
+            <div class="box" data-aos="zoom-in">
+                <span>2018 - 2019</span>
+                <h3>Web developer</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quaerat assumenda, eaque sequi repellat natus quia.</p>
+            </div>
+
+            <div class="box" data-aos="zoom-in">
+                <span>2020 - 2021</span>
+                <h3>graphic designer</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quaerat assumenda, eaque sequi repellat natus quia.</p>
+            </div>
+
+            <div class="box" data-aos="zoom-in">
+                <span>2021 - 2022</span>
+                <h3>web designer</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quaerat assumenda, eaque sequi repellat natus quia.</p>
+            </div>
+
+        </div>
+
+        <div class="box-container">
+
+            <h3 class="title" data-aos="fade-left">experience</h3>
+
+            <div class="box" data-aos="zoom-in">
+                <span>2018 - 2019</span>
+                <h3>front-end develope</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Quaerat assumenda, eaque sequi repellat natus quia.</p>
+            </div>
+
+            <div class="box" data-aos="zoom-in">
+                <span>2020 - 2021</span>
+                <h3>back-end developer</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quaerat assumenda, eaque sequi repellat natus quia.</p>
+            </div>
+
+            <div class="box" data-aos="zoom-in">
+                <span>2021 - 2022</span>
+                <h3>full-stack developer</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Quaerat assumenda, eaque sequi repellat natus quia.</p>
+            </div>
+
+        </div>
+
+    </div>
+
+</section>
+
+<!-- educ &exp section ENDS -->
+
+<!-- services section STARTS  -->
+
+<section class="services" id="services">
+
+    <h1 class="heading" data-aos="fade-up"> <span>services</span> </h1>
+
+    <div class="box-container">
+
+        <div class="box" data-aos="zoom-in">
+            <i class="fas fa-code"></i>
+            <h3>web development</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat veritatis accusantium nostrum rem ipsa.</p>
+        </div>
+
+        <div class="box" data-aos="zoom-in">
+            <i class="fas fa-paint-brush"></i>
+            <h3>graphic design</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat veritatis accusantium nostrum rem ipsa.</p>
+        </div>
+
+        <div class="box" data-aos="zoom-in">
+            <i class="fas fa-laptop"></i>
+            <h3>web design</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat veritatis accusantium nostrum rem ipsa.</p>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- services section ENDS  -->
+
+<!-- portfolio section STARTS  -->
+
+<section class="portfolio" id="portfolio">
+
+    <h1 class="heading" data-aos="fade-up"> <span>portfolio </span></h1>
+
+    <div class="box-container">
+
+        <div class="box" data-aos="zoom-in">
+            <img src="img1.jpg" alt="">
+            <h3>web development</h3>
+            <span>( 2018 - 2019 )</span>
+        </div>
+
+        <div class="box" data-aos="zoom-in">
+            <img src="img2.jpg" alt="">
+            <h3>web development</h3>
+            <span>( 2019 - 2020 )</span>
+        </div>
+
+        <div class="box" data-aos="zoom-in">
+            <img src="img3.jpg" alt="">
+            <h3>web development</h3>
+            <span>( 2020 - 2022 )</span>
+        </div>
+
+        <div class="box" data-aos="zoom-in">
+            <img src="img4.jpg" alt="">
+            <h3>web development</h3>
+            <span>( 2020 - 2022 )</span>
+        </div>
+
+        <div class="box" data-aos="zoom-in">
+            <img src="img-4.jpg" alt="">
+            <h3>web development</h3>
+            <span>( 2020 - 2022 )</span>
+        </div>
+
+        <div class="box" data-aos="zoom-in">
+            <img src="img5.jpg" alt="">
+            <h3>web development</h3>
+            <span>( 2020 - 2022 )</span>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- portfolio section ENDS  -->
+
+<!-- CONTACT section STARTS  -->
+
+<section class="contact" id="contact">
+
+    <h1 class="heading" data-aos="fade-up"> <span>contact me</span> </h1>
+
+    <form action="dbconnect.php" method="post">
+        <div class="flex">
+            <input data-aos="fade-right" type="text" name="name" placeholder="Enter your name" class="box" required>
+            <input data-aos="fade-left" type="email" name="email" placeholder="Enter your email" class="box" required>
+        </div>
+        <input data-aos="fade-up" type="number" min="0" name="number" placeholder="Enter your number" class="box" required>
+        <textarea data-aos="fade-up" name="message" class="box" required placeholder="Enter your message" 
+        cols="30" rows="10"></textarea>
+        <input type="submit" data-aos="zoom-in" value="send message" name="send" class="btn">
+
+    </form>
+
+    <div class="box-container">
+
+        <div class="box" data-aos="zoom-in">
+            <i class="fas fa-phone"></i>
+            <h3>phone</h3>
+            <p>09123456789</p>
+        </div>
+
+        <div class="box" data-aos="zoom-in">
+            <i class="fas fa-envelope"></i>
+            <h3>email</h3>
+            <p>annedoe@gmail.com</p>
+        </div>
+
+        <div class="box" data-aos="zoom-in">
+         <i class="fas fa-map-marker-alt"></i>
+         <h3>address</h3>
+         <p>Miag-ao, Iloilo</p>
+        </div>
+
+</section>
+
+<!-- CONTACT section ENDS  -->
+ 
+<div class="credit"> &copy; copyright @ <?php echo date('Y'); ?> </div>
+
+
+
+<!--  cjs file -->
+<script src="script.js"></script>
+
+<!--  aos js file -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script>
+    AOS.init({
+        duration:800,
+        delay:300
+    });
+</script>
+
+</body>
+</html>
